# broker-ai

./: .gitignore  pyproject.toml  symbols-notes.md
broker_ai/: symbols.py  wsocket.py
broker_ai/angelone/: angel_one.py
broker_ai/delta/: README.md  __init__.py  api_helper.py  delta.py  delta.yaml  symbols.py  wsocket.py
broker_ai/finvasia/: api_helper.py  finvasia.py
broker_ai/flattrade/: api_helper.py  flattrade.py  flattrade.yaml  symbols.py  wsocket.py
broker_ai/zerodha/: api_helper.py  wsocket.py  zerodha.py
examples/: delta_example.py
scripts/: login_delta.py  test_wsocket.py  test_wsocket_raw.py
tests/: conftest.py  test_api_helper.py  test_delta.py  test_symbols.py  test_wsocket.py
