[project]
name = 'broker-ai'
version = '0.1.0'
description = 'Broker-agnostic trading symbols and websocket'
requires-python = '>=3.10'
dependencies = [
    'pandas',
    'pyyaml',
    'requests',
    'websocket-client',
    'delta-rest-client',
    'pendulum',
]

[tool.setuptools.packages.find]
include = ['broker_ai*']

[tool.setuptools.package-data]
broker_ai = ["delta/delta.yaml"]